. server xml reload, and reopen logging available via admin url
. slave startup re-organised so that relays are more independant
. on xml reload, active sources are updated as well
. When max-listeners reached, a HTTP 302 code can be sent to redirect
clients to alternative slave hosts. 
. authenticated relays, those that match the relay user/pass, bypass the 
max-listener check

kh51
. make config lock a rwlock instead of mutex, removes unneccesary stalling
  and removes possible (although not reported) deadlock cases
. very hard to trigger race in util fixed
. on-demand authenticated relay wasn't being kicked off properly
. allow the prevention of duplicate authenticated clients connecting. The
  mechanism is the same as SVN except duplication checking is a generic
  authentication check and applies to all auth mechanisms.
. make connection handler only sleep when connections are not pending
. mp3 streams with in-line metadata could of created some empty nodes, not
a stability problem, but wasteful.
. small memory leak fixes
. small internal code cleanups

kh50
. removed redundant pointer, adding new clients could cause a memory
  corruption problem
. structured relay startup differently, so that relays operate independently
  from one another. relay threads are now attached.
. resync with trunk. make m3u lookups more general, makes static files work
  with .m3u
. encode names and values from stats when building xsl pages
. add /admin/function[.xsl]?perform=xx the current handlers are
    xx = reopenlog
    xx = updatecfg
. removed old abort test

kh49
. allow for changes in mount settings to update active sources
. allow for slaves to authenticate with the master using the 
  master user/pass.
. if client authenticates as a relay then bypass the normal
  authentication and max listeners check.
. fix a string length problem with relay auth
. if slave fails to auth then log it and go back to waiting
. remove unused/debug code